Fixed warnings all over